<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Eventos Manager</string>
    <string name="app_id" translatable="false">124069801090273</string>
    <string name="get_started" translatable="false">To get started, log in using Facebook</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="event_view" translatale="false">Manage Events</string>
    <string name="aboutButton" translatable="false">About</string>
    <string name="listEvent" translatable="false">List Events</string>
    <string name="createEvent" translatable="false">Create Events</string>
    <string name="aboutme" translatable="false">Afonso Neto</string>
    <string name="goback" translatable="false">Go Back</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="loginButton" translatable="false">Login</string>
    <string name="logoutButton" translatable="false">Logout</string>
    <string name="error" translatable="false">Error</string>
    <string name="netDownText" translatable="false">Internet is down, need internet to use this app</string>
    <string name="exitMsgT" translatable="false">Exit</string>
    <string name="exitMsg" translatable="false">Are you sure you want to exit?</string>
</resources>