<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="397dp" >

        <Button
            android:id="@+id/aboutView"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eventButtonView"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/aboutButton" />

        <Button
            android:id="@+id/eventButtonView"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aboutView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/event_view" />

        <Button
            android:id="@+id/loginView"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eventButtonView"
            android:layout_alignLeft="@+id/eventButtonView"
            android:layout_marginBottom="17dp"
            android:gravity="center"
            android:text="@string/loginButton" />
    </RelativeLayout>

</LinearLayout>